--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npm run dev & nodemon app.js"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
     "bootstrap": "^5.3.5",
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.1.4"
